syntax = "proto3";

import "google/protobuf/timestamp.proto";

package eventsv1;
option go_package = "./eventsv1";

service EventsHandler {
  rpc ListEventsByDay (ListEventsRequest) returns (ListEventsResponse);
  rpc ListEventsByWeek (ListEventsRequest) returns (ListEventsResponse);
  rpc ListEventsByMonth (ListEventsRequest) returns (ListEventsResponse);
  rpc CreateEvent (CreateEventRequest) returns (CreateEventResponse);
  rpc UpdateEvent (UpdateEventRequest) returns (UpdateEventResponse);
  rpc DeleteEvent (DeleteEventRequest) returns (DeleteEventResponse);
}

message ListEventsRequest {
  google.protobuf.Timestamp from_date = 1;
}

message ListEventsResponse {
  repeated Event events = 1;
}

message CreateEventRequest {
  Event event = 1;
}

message CreateEventResponse {
  int64 id = 1;
}

message UpdateEventRequest {
  Event event = 1;
  int64 id = 2;
}

message UpdateEventResponse {
}

message DeleteEventRequest {
  int64 id = 1;
}

message DeleteEventResponse {
}

message Event
{
  int64 id = 1;
  string title = 2;
  google.protobuf.Timestamp start_time = 3;
  int64 duration = 4;
  string description = 5;
  int64 owner = 6;
  int32 notify_time = 7;
  google.protobuf.Timestamp created = 8;
  google.protobuf.Timestamp updated = 9;
}
